--- a/app/modules/home/home.tpl.html
+++ b/app/modules/home/home.tpl.html
@@ -1,4 +1,4 @@
-<!-- homeCtrl is set as a HomeController in the home.route.js -->
+<!-- homeCtrl is set as a HomeController in the home.moddule.js -->
 <div>
     <div class="jumbotron">
         <div>
