--- a/app/index.html
+++ b/app/index.html
@@ -21,16 +21,10 @@
 </head>
 
 <body>
-    <ul class="menu">
-        <li><a href="#/home">home</a></li>
-        <li><a href="#/number-generator">number generator</a></li>
-    </ul>
-
+    <div ui-view="main"></div>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-      <![endif]-->
-
-    <div class="container" ui-view="main"></div>
+    <![endif]-->
 
     <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
